Found and fixed wraping issue

--- a/overview/style.css
+++ b/overview/style.css
@@ -6,9 +6,6 @@ main {
     margin: 20px;
 }
 
-div {
-    border: 1px solid black;
-}
 
 
 .nav-item {
@@ -64,7 +61,6 @@ div {
     height: calc(100vh - 97px - 40px);
     width: 70%;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.7);
